--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,7 +31,7 @@ github_username:  jekyll
 
 # Build settings
 #theme: minima
-remote_theme: tomjoht/documentation-theme-jekyll
+remote_theme: benbalter/retlab
 plugins:
   - jekyll-feed
 
